Fix gradle warnings at some test tasks