@@ -47,6 +47,11 @@ description = "libnetty/HTTP-Server"
 tasks.test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+    jvmArgs = listOf(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off",
+        classpath.find { "mockito-core" in it.name }?.let { "-javaagent:${it.absolutePath}" } ?: "",
+    )
 }
 
 publishing {
